flux/infra/influxdb/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influxdb-web-route
  namespace: influxdb
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik

  hostnames:
    - influxdb.tartarus.us

  rules:
    - backendRefs:
        - name: influxdb
          port: 8086
