flux/infra/influxdb/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb-web
  namespace: influxdb
  annotations:
    switchboard.borchero.com/ignore: "all"
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`influxdb.tartarus.us`)
      kind: Rule
      services:
        - name: influxdb
          kind: Service
          port: 8086
          scheme: http
      middlewares:
        - name: https-redirect-middleware
          namespace: influxdb

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
